# annealMusic

./: .firebaserc  .gitignore  .prettierignore  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  LICENSES.md  README.md  SECURITY.md  anneal_NLD_cover_letter_FINAL_v2.tex  averyloop_log.json  capacitor.config.ts  death_of_a_chimera.tex  death_of_a_chimera_aip.tex  death_of_a_chimera_nld.tex  death_of_a_chimera_nld_FINAL_v6.tex  embed.html  eslint.config.js  firebase.json  index.html  learn.html  package-lock.json  package.json  playwright.config.ts  render.html  research.html  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.learn.ts  vite.config.mobile.ts  vite.config.research.ts  vite.config.ts  vite.worklet.config.ts
api/: .env.example  Dockerfile  create_tables.py  docker-compose.yml  pyproject.toml  scratch_print_routes.py
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_gallery.py  0003_recording_slug.py  0004_user_sources.py  0005_auth_claim.py  0006_ai_patches.py  0007_jam_sessions.py  0008_v2_0_social.py  0009_v3_0_pieces.py  (+24 more)
api/app/: config.py  db.py  deps.py  errors.py  library_taxonomy.py  logging_config.py  main.py  middleware.py  models.py  moderation.py  rate_limit.py  render.py  renderer_playwright.py  schemas.py  sentry.py  share.py  slug.py  storage.py  study_provenance.py  validation.py
api/data/: ai_examples.json  clip_library.json  lesson_examples.json
api/scripts/: export_recipes.py  seed.py  seed_curriculum.py  seed_mapping_templates.py
api/tests/: conftest.py  test_accessibility.py  test_admin.py  test_ai_checkpoint1.py  test_ai_checkpoint2.py  test_analytics_admin.py  test_auth_claim.py  test_captures.py  test_clinical.py  test_clinical_biofeedback.py  test_clip_retrieval.py  test_clips.py  test_clips_generation.py  test_curriculum_admin.py  test_curriculum_content.py  test_curriculum_e2e.py  test_curriculum_qa.py  test_custom_tunings.py  test_embed.py  test_experiments.py  test_gallery.py  test_health.py  test_history_library.py  test_jam.py  test_lesson_generation.py  test_lesson_progress.py  test_lessons.py  test_listening_sessions.py  test_mapping_templates.py  test_moderation.py  test_next_lesson_ranker.py  test_observability.py  test_patches.py  test_pieces.py  test_preview.py  test_rate_limit.py  test_recordings.py  test_render.py  test_renders.py  test_reports.py  (+11 more)
(+1029 files in other folders)
